@@ -17,6 +17,5 @@
  * This package is designed to represent directed graph.
  *
  * @todo  setters should return this for chaining
- * @todo  use global uml diagram and use hide facility from plant uml
  */
 package dgraph;
